@startuml

interface ValueListener<T> {
  + onChange(T)
}

class Binding {
  + bind(...)
}

class SliderViewModel {
  - listeners : List<ValueListener<BigDecimal>>
  + addListener(...)
}

class NumericFieldViewModel {
  + setOnValueChanged(...)
  + setValue(...)
}

class LabelViewModel {
  + setText(...)
}

SliderViewModel --> ValueListener : registers
Binding --> ValueListener
Binding --> SliderViewModel
ValueListener --> NumericFieldViewModel : updates
ValueListener --> LabelViewModel : updates
SliderViewModel --> NumericFieldViewModel : updates
NumericFieldViewModel --> SliderViewModel : updates

@enduml
